--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,20 @@
 .app {
+  margin: 2.5px 0;
   height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
 }
 
+.quest-counter {
+  margin: 2.5px 0;
+}
+
 .melds {
-  padding: 5px 0;
+  padding: 2.5px 0;
   overflow: auto;
 }
 
-.snipe-controls {
-  padding: 5px 0;
+.controls {
+  padding: 2.5px 0;
 }
